[tool.poetry]
name = "Executor"
version = "0.1.0"
description = ""
authors = ["Daniil Shcherbakov <burhaunt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.6"
aiohttp = "^3.5"
redis = "^3.2"
psycopg2 = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
